--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "@testing-library/user-event": "^7.1.2",
   "axios": "^0.18.1",
   "global": "^4.4.0",
+  "movie-trailer": "^2.0.6",
   "netlify-cli": "^2.65.7",
   "react": "^16.13.1",
   "react-dom": "^16.13.1",
-  "react-scripts": "3.4.3"
+  "react-scripts": "3.4.3",
+  "react-youtube": "^7.13.0"
  },
  "scripts": {
   "start": "react-scripts start",
